Extended and revisioned partially the openapi specification
